
[tool.poetry]
name = "task"
version = "0.1.0"
description = "\"Command line issue tracker\""
authors = ["Jim Given <jimgiven619@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.1"
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.scripts]
task = 'task:cli'

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
