
[tool.poetry]
name = "watdo"
version = "0.2.0"
description = "\"Command line issue tracker\""
authors = ["Jim Given <jimgiven619@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.1"
click = "^8.1.3"
rich = "^12.5.1"
GitPython = "^3.1.28"
parse = "^1.19.0"

[tool.poetry.scripts]
watdo = 'watdo:cli'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
